Сдача 2 этапа дипломного проекта. 1-ая итерация. Все тесты успешны.